fixed lucide icon alignments

--- a/src/site/styles/digital-garden-base.scss
+++ b/src/site/styles/digital-garden-base.scss
@@ -735,3 +735,9 @@ body.links-note-icon .internal-link[data-note-icon="3"]::before {
         align-items: center;
     }
 }
+
+
+.align-icon {
+    display: inline-flex;
+    align-items: center;
+}
